--- a/fall.html
+++ b/fall.html
@@ -173,6 +173,14 @@
             background-color: var(--accent);
         }
 
+        .custom-subscribe-form {
+            min-width: 400px;
+            max-width: 500px;
+            min-height: 250px;
+            width: 100%;
+            padding: 20px;
+        }
+
         @media (max-width: 768px) {
             .navbar-brand {
                 text-align: center;
@@ -212,11 +220,11 @@
                         </ul>
                     </li>
                 </ul>
-                <div class="dropstart">
+                <div class="nav-item dropdown">
                     <a href="#" class="Subscribe dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Subscribe
                     </a>
-                    <div class="dropdown-menu dropdown-menu-wide p-4">
+                    <div class="dropdown-menu dropdown-menu-end custom-subscribe-form p-4">
                         <form>
                             <input type="text" id="firstname" name="firstname" class="form-control mb-2" placeholder="First Name"
                                 aria-label="First Name" required />
@@ -249,25 +257,6 @@
             </ul>
         </nav>
     </main>
-
-    <div class="modal fade" id="subscribeModal" tabindex="-1" aria-labelledby="subscribeModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="subscribeModalLabel">Join Our Community</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form class="grid">
-                        <input type="text" id="firstname" name="firstname" placeholder="First Name" aria-label="First Name"
-                            required />
-                        <input type="email" id="email" name="email" placeholder="Email" aria-label="Email" required />
-                        <button type="submit" onclick="event.preventDefault()">Subscribe</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
     
     <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog">
